<resources>
    <string name="app_name">SquadsApp</string>
    <string name="todo">TODO</string>
    <string name="login_text">Login to SquadsApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="no_account">No account?</string>
    <string name="sign_up">Sign up</string>
    <string name="create_text">Create your account</string>
    <string name="have_an_account">Have an account?</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone number</string>
    <string name="log_in">Log in</string>
    <string name="setup_a_password">Setup a password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="setup_a_profile">Setup a profile</string>
    <string name="upload_profile_photo">Upload profile photo</string>
    <string name="content_country">Content country</string>
    <string name="country">Country</string>
    <string name="japan">Japan</string>
    <string name="title_activity_tab_bar_controller">TabBarController</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="upcoming">Upcoming</string>
    <string name="more">More</string>
    <string name="past">Past</string>
    <string name="home">Home</string>
    <string name="select_country">Select Country</string>
    <string name="all_countries">All Countries</string>
    <string name="create_trip">Create trip</string>
    <string name="starting_location">Starting location</string>
    <string name="destination">Destination</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="members">Members</string>
    <string name="create_now">Create now</string>
    <string name="account">Account</string>
    <string name="about">About</string>
    <string name="login">Login</string>
    <string name="edit_profile">Edit profile</string>
    <string name="private_information">Private information</string>
    <string name="change_password">Change password</string>
    <string name="change_country">Change country</string>
    <string name="ads">Ads</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="log_out_now">Log out now</string>
    <string name="done">Done</string>
    <string name="trip_info">Trip Info</string>
    <string name="owner">Owner</string>
    <string name="announcement">Announcement</string>
    <string name="initiate">Initiate</string>
    <string name="cancel">Cancel</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="phone">Phone</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="profile">Profile</string>
    <string name="information">Information</string>
    <string name="click_here_to_setup_announcement">Click here to setup announcement</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="requesting">Requesting trips</string>
    <string name="notifications">Notifications</string>
    <string name="navigate">Navigate</string>
    <string name="yourTrips">YourTrips</string>
    <string name="meeting_location">Meeting location</string>
    <string name="map">Map</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="this_user_wants_to_join_your_trip">this user wants to join your trip</string>
    <string name="member_requests">Member requests</string>
    <string name="trip_requests">Trip requests</string>
</resources>
