<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:onClick="handleKeyboard"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".controller.SignUpController">

    <LinearLayout
            android:layout_alignParentTop="true"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" tools:ignore="UselessParent">
        <ImageView
                android:background="@drawable/squadsapp"
                android:layout_marginTop="80dp"
                android:layout_gravity="center"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/todo">
        </ImageView>
        <TextView
                android:layout_marginTop="30dp"
                android:layout_gravity="center"
                android:text="@string/create_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@android:color/black"
                android:fontFamily="@font/noto_sans_bold">
        </TextView>
        <EditText
                android:text="test"
                android:id="@+id/txtName"
                android:hint="@string/name"
                android:maxLength="20"
                android:textColorHint="@color/colorHint"
                android:background="@drawable/textbox_style"
                android:textColor="@color/colorBlack"
                android:textSize="17sp"
                android:fontFamily="@font/noto_sans"
                android:layout_marginTop="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="40dp" tools:ignore="Autofill,TextFields">
        </EditText>
        <EditText
                android:text="0991000123"
                android:id="@+id/txtPhoneNumber"
                android:hint="@string/phone_number"
                android:maxLength="15"
                android:textColorHint="@color/colorHint"
                android:background="@drawable/textbox_style"
                android:textColor="@color/colorBlack"
                android:textSize="17sp"
                android:fontFamily="@font/noto_sans"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="40dp" tools:ignore="Autofill,TextFields">
        </EditText>
        <EditText
                android:text="test"
                android:id="@+id/txtUsername"
                android:hint="@string/username"
                android:maxLength="20"
                android:textColorHint="@color/colorHint"
                android:background="@drawable/textbox_style"
                android:textColor="@color/colorBlack"
                android:textSize="17sp"
                android:fontFamily="@font/noto_sans"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:layout_width="match_parent"
                android:layout_height="40dp" tools:ignore="Autofill,TextFields">
        </EditText>
        <Button
                android:onClick="handleNext"
                android:text="@string/next"
                android:textAllCaps="false"
                android:fontFamily="@font/noto_sans"
                android:textSize="17sp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/button_style_red"
                android:layout_marginTop="25dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="40dp">
        </Button>
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" tools:ignore="UselessLeaf">
        <TextView
                android:text="@string/have_an_account"
                android:fontFamily="@font/noto_sans"
                android:textSize="15sp"
                android:textColor="@color/colorBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <Button
                android:onClick="handleLogin"
                android:text="@string/log_in"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:fontFamily="@font/noto_sans"
                android:textColor="@color/colorDarkRed"
                android:background="@android:color/transparent"
                android:layout_width="50dp"
                android:layout_height="60dp"/>
    </LinearLayout>
</RelativeLayout>