<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:onClick="handleKeyboard"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".controller.SetupPasswordController">
    <TextView
            android:layout_marginTop="210dp"
            android:layout_gravity="center"
            android:text="@string/setup_a_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/noto_sans_bold">
    </TextView>
    <EditText
            android:text="123"
            android:id="@+id/txtPassword"
            android:hint="@string/password"
            android:maxLength="30"
            android:inputType="textPassword"
            android:textColorHint="@color/colorHint"
            android:background="@drawable/textbox_style"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:fontFamily="@font/noto_sans"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_width="match_parent"
            android:layout_height="40dp" tools:ignore="Autofill,TextFields">
    </EditText>
    <EditText
            android:text="123"
            android:id="@+id/txtConfirmPassword"
            android:hint="@string/confirm_password"
            android:maxLength="30"
            android:inputType="textPassword"
            android:textColorHint="@color/colorHint"
            android:background="@drawable/textbox_style"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:fontFamily="@font/noto_sans"
            android:layout_marginTop="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:layout_width="match_parent"
            android:layout_height="40dp" tools:ignore="Autofill,TextFields">
    </EditText>
    <Button
            android:onClick="handleNext"
            android:text="@string/next"
            android:textAllCaps="false"
            android:fontFamily="@font/noto_sans"
            android:textSize="17sp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_style_red"
            android:layout_marginTop="25dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="40dp">
    </Button>
</LinearLayout>