<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".controller.SetupProfileController">
    <TextView
            android:layout_marginTop="210dp"
            android:layout_gravity="center"
            android:text="@string/setup_a_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/noto_sans_bold">
    </TextView>
    <ImageView
            android:id="@+id/imgProfileView"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            tools:ignore="ContentDescription">
    </ImageView>
    <Button
            android:onClick="handleUploadProfile"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:text="@string/upload_profile_photo"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:fontFamily="@font/noto_sans_bold"
            android:textColor="@color/colorDarkRed"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:background="@color/colorTextBorder"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            tools:ignore="UselessLeaf"/>
    <TextView
            android:text="@string/content_country"
            android:fontFamily="@font/noto_sans_bold"
            android:textSize="17sp"
            android:textColor="@color/colorBlack"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <LinearLayout
            android:onClick="handleCountry"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessLeaf">
            <TextView
                    android:layout_marginStart="30dp"
                    android:text="@string/country"
                    android:fontFamily="@font/noto_sans"
                    android:textSize="17sp"
                    android:textColor="@color/colorBlack"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:id="@+id/txtCountry"
                    android:layout_marginStart="10dp"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:fontFamily="@font/noto_sans"
                    android:textSize="17sp"
                    android:textColor="@color/colorBlack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginStart="110dp"
            android:background="@color/colorTextBorder"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            tools:ignore="UselessLeaf"/>
    <Button
            android:onClick="handleSignUp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:fontFamily="@font/noto_sans"
            android:textSize="17sp"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_style_red"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:layout_width="match_parent"
            android:layout_height="40dp">
    </Button>
</LinearLayout>