<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        android:onClick="handleKeyboard"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorWhite"
        tools:context=".controller.CreateTripController">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:popupTheme="@style/AppTheme.PopupOverlay">
        <Button
                android:onClick="handleDone"
                android:text="@string/done"
                android:textColor="@color/colorDarkRed"
                android:textAllCaps="false"
                android:textSize="17sp"
                android:fontFamily="@font/noto_sans_bold"
                android:background="@android:color/transparent"
                android:layout_width="45dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                tools:ignore="RtlHardcoded" />
        <TextView
                android:text="@string/create_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/noto_sans_bold"
                android:textColor="@color/colorBlack"
                android:textSize="19sp" tools:ignore="RelativeOverlap"/>
        <Button
                android:onClick="handleDismiss"
                android:background="@drawable/arrow_right"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                tools:ignore="RtlHardcoded" />
        <View
                android:layout_alignParentBottom="true"
                android:background="@color/colorTextBorder"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>
    </RelativeLayout>
    <EditText
            android:id="@+id/txtLocation"
            android:hint="@string/starting_location"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColorHint="@color/colorHint"
            android:background="@android:color/transparent"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:fontFamily="@font/noto_sans"
            android:layout_marginTop="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="40dp" tools:ignore="Autofill,TextFields"/>
    <View
            android:background="@color/colorTextBorder"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
    <EditText
            android:id="@+id/txtDestination"
            android:hint="@string/destination"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColorHint="@color/colorHint"
            android:background="@android:color/transparent"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:fontFamily="@font/noto_sans"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="40dp" tools:ignore="Autofill,TextFields"/>
    <View
            android:background="@color/colorTextBorder"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
    <EditText
            android:id="@+id/txtDate"
            android:hint="@string/date"
            android:focusable="false"
            android:textColorHint="@color/colorHint"
            android:maxLines="1"
            android:ellipsize="end"
            android:background="@android:color/transparent"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:fontFamily="@font/noto_sans"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="40dp" tools:ignore="Autofill,TextFields"/>
    <View
            android:background="@color/colorTextBorder"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
    <EditText
            android:id="@+id/txtTime"
            android:hint="@string/time"
            android:focusable="false"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColorHint="@color/colorHint"
            android:background="@android:color/transparent"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:fontFamily="@font/noto_sans"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="40dp" tools:ignore="Autofill,LabelFor,TextFields"/>
    <View
            android:background="@color/colorTextBorder"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
    <EditText
            android:id="@+id/txtMembers"
            android:hint="@string/members"
            android:inputType="number"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColorHint="@color/colorHint"
            android:background="@android:color/transparent"
            android:textColor="@color/colorBlack"
            android:textSize="17sp"
            android:fontFamily="@font/noto_sans"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="40dp" tools:ignore="Autofill,TextFields"/>
    <View
            android:background="@color/colorTextBorder"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"/>
    <LinearLayout
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/meeting_location"
                android:textColor="@color/colorHint"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="@font/noto_sans"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="23dp"/>
        <fragment
                android:id="@+id/handleMapView"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
        </fragment>
    </LinearLayout>
</LinearLayout>
